[add] Butterfly Audio Lib as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "source/min-lib"]
 	path = source/min-lib
 	url = https://github.com/Cycling74/min-lib.git
+[submodule "submodules/bfa-lib"]
+	path = submodules/bfa-lib
+	url = https://github.com/Butterfly-Audio/Butterfly_Audio_Library.git
