[improv] stacked_tables external

--- a/source/projects/bfa.stacked_tables_tilde/CMakeLists.txt
+++ b/source/projects/bfa.stacked_tables_tilde/CMakeLists.txt
@@ -22,10 +22,8 @@ include_directories(
 
 set( SOURCE_FILES
 	${PROJECT_NAME}.cpp
+	stacked_tables_helper_functions.h
 )
-
-#set(CMAKE_CXX_STANDARD 20)
-#set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_library( 
 	${PROJECT_NAME} 
@@ -33,18 +31,19 @@ add_library(
 	${SOURCE_FILES}
 )
 
-#Add library to executable?
+include(${C74_MIN_API_DIR}/script/min-posttarget.cmake)
+
 target_link_libraries(
 		${PROJECT_NAME}
-		INTERFACE
+	PRIVATE
 		wave
 		synth
 		math
 		utilities
-		modulation
 )
 
-include(${C74_MIN_API_DIR}/script/min-posttarget.cmake)
+set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 20)
+set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD_REQUIRED True)
 
 
 #############################################################
