[redesign] stacked_frames gui & processor

--- a/source/projects/bfa.stacked_tables_tilde/CMakeLists.txt
+++ b/source/projects/bfa.stacked_tables_tilde/CMakeLists.txt
@@ -23,6 +23,8 @@ include_directories(
 set( SOURCE_FILES
 	${PROJECT_NAME}.cpp
 	stacked_tables_helper_functions.h
+    audio_processor.h
+    stacked_frames.h
 )
 
 add_library( 
