[fix] table preprocessor
- Bug: huge selections sometimes vanish when zooming in a lot
Likely reason: internal cast of rect coords by jgraphics to smaller data type (e.g. short). When zooming in, coords get very large -> rect is sometimes not on visual area
Solution: restrict size of selection rect

- setup to compile sample_preprocessor.cpp with separate translation unit (possible through virtual interface of event and painter)

--- a/source/projects/bfa.table_preprocessing/CMakeLists.txt
+++ b/source/projects/bfa.table_preprocessing/CMakeLists.txt
@@ -19,6 +19,7 @@ include_directories(
 
 set( SOURCE_FILES
 	${PROJECT_NAME}.cpp
+	sample_preprocessor.cpp
 	sample_preprocessor.h
 	graphics_transform.h
 )
